[package]
name = "restapi-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.1"
log = { version = "0.4", features = ["std", "serde"] }
lazy_static = "1.4.0"

[[bin]]
name = "restapi-rust"
path = "main.rs"
